add two command tone changer,continue text

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "grammari-x",
   "title": "GrammariX: Your Writing's Best Friend",
-  "description": "In this extension, you can fix your grammar and rewrite your sentences more effectively.",
+  "description": "In this extension, you can fix your grammar and paraphrase your sentences more effectively.",
   "icon": "icon.png",
   "author": "hakob_nersesian",
   "categories": [
